# Cinder

./: .gitignore  CMakeLists.txt  HUNTER.md
_builds/ios-9-3/: CMakeCache.txt  cmake_install.cmake
_builds/ios-9-3/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
_builds/ios-9-3/_3rdParty/polly/: saved-arguments
_builds/ios-9-3/cinder.build/Debug-iphoneos/ALL_BUILD.build/: Script-0E025DE80065449098B1013B.sh  dgph
_builds/ios-9-3/cinder.build/Debug-iphoneos/ZERO_CHECK.build/: Script-5519E65C810F4F3293891206.sh  dgph
_builds/ios-9-3/cinder.build/Debug-iphoneos/cinder.build/: dgph
_builds/ios-9-3/cinder.build/Debug-iphoneos/cinder.build/Objects-normal/arm64/: cinderd.LinkFileList
_builds/ios-9-3/cinder.xcodeproj/: project.pbxproj
_logs/polly/: log.txt
